# mlh-final-project

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  intro.tex  main.tex  mimic_info.txt  pyproject.toml  test_results.pkl  train_model.py  trained_model.pth  unseen_data_evaluation.py
mlhc_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
model/: __init__.py  loss.py  model.py  prediction.py  trainning.py
notebooks/: 00_setup_and_auth.ipynb  01_initial_data_exploration.ipynb  skeleton.ipynb
pre-processing/: config.py  utils.py
preprocessing/: __init__.py  exploratory_data_analysis.ipynb  preprocess_pipeline.py  preprocess_training_data.ipynb  utils.py
preprocessing/data/: mask_test.pkl  mask_train.pkl  mask_val.pkl  models_params_dict.pkl  y_test_lables.pkl  y_train_lables.pkl  y_val_lables.pkl
project/: README.md  requirements.txt
